# frida-gum-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
releng/: change_mkdevkit_header_generation_rule.patch  msvc_chinese.patch
src/: main.cc
